--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -154,7 +154,7 @@
 <ul>
 <li>Go to your environment on the portal </li>
 <li>Click on MONITOR APPLICATION<br><br>
-<img src="./images/env_gotoapplication.png" alt="access ud directories schema"></li>
+<img src="images/env_gotoapplication.png" alt="access ud directories schema"></li>
 </ul>
 <p><br></p>
 <ul>
@@ -165,7 +165,7 @@
 <li>Scroll down a bit until you get to &quot;<strong>TAFJ Runtime properties</strong>&quot; section</li>
 <li>Here you can see: temn.tafj.runtime.directory.current    /opt/rh/eap7/root/usr/share/wildfly/default
 <br>
-<img src="./images/env_tajfruntimeproperties.png" alt="access ud directories schema"></li>
+<img src="images/env_tajfruntimeproperties.png" alt="access ud directories schema"></li>
 </ul>
 <p><br></p>
 <ul>
