--- a/home/toc.html
+++ b/home/toc.html
@@ -90,6 +90,9 @@
                   <li>
                     <a href="temenos-cloud-templates.html" name="" title="Temenos Cloud Templates">Temenos Cloud Templates</a>
                   </li>
+                  <li>
+                    <a href="temenos-implementation-methodology.html" name="" title="&#8203;Temenos Implementation Methodology">&#8203;Temenos Implementation Methodology</a>
+                  </li>
                 </ul>  </li>
             <li>
               <span class="expand-stub"></span>
@@ -241,6 +244,9 @@
                       <ul class="nav level3">
                         <li>
                           <a href="techguides/troubleshooting.html" name="" title="Extend Troubleshooting">Extend Troubleshooting</a>
+                        </li>
+                        <li>
+                          <a href="techguides/tafj-db-setup.html" name="" title="DB Conversion Instructions">DB Conversion Instructions</a>
                         </li>
                       </ul>  </li>
                   <li>
