--- a/home/techguides/jenkins-build-promote-pipelines.html
+++ b/home/techguides/jenkins-build-promote-pipelines.html
@@ -81,44 +81,51 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="use-jenkins-to-build-pipelines">Use Jenkins to Build Pipelines</h2>
 
-<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=NKuOZJURZzg"><strong>Video Tutorial</strong></a>!</p>
+<div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=NKuOZJURZzg"><strong>Video Tutorial</strong></a>! <em>(to be updated)</em></p>
 </div>
 <h2 id="introduction">Introduction</h2>
 <p>This document explains how to configure the Jenkins build and promote pipelines. </p>
-<p><strong>&#39;Build pipeline&#39;</strong> builds the artifacts and deploys them in test environment. </p>
-<p>Once the testing is successful and it&#39;s ready for promotion, <strong>&#39;Promote pipeline&#39;</strong> deploys the tested artifacts into integrated dev environment. </p>
-<p>For this tutorial, we will be integrating Jenkins with GitHub so that Jenkins can pull the code and build artifacts.</p>
+<p>The <strong>&#39;Build pipeline&#39;</strong> job builds the artifacts and deploys them into the test environment. </p>
+<p>Once the testing is successful and it&#39;s ready for promotion, the <strong>&#39;Promote pipeline&#39;</strong> deploys the tested artifacts into the integrated dev environment. </p>
+<p>For this tutorial, we will be integrating Jenkins with GitLab (or Bitbucket - depending on your repository) so that Jenkins can pull the code and build artifacts.</p>
 <p><img src="images/jenkins-build-promote-pipelines-flow.png" alt=""></p>
+<h2 id="main-steps">Main steps</h2>
+<ul>
+<li><p>Merge the team changes to existing code​.</p>
+</li>
+<li><p>Run the integrated build​.</p>
+</li>
+<li><p>Deploy the changes to a Integrated DEV Environment​.</p>
+</li>
+<li><p>Continue with the existing flow.</p>
+</li>
+</ul>
+<p><br></p>
 <p>To implement the Pipeline as a code we will use Jenkins Pipeline in order to automate tasks associated with building, testing and deploying software.</p>
 <h2 id="access-development-portal">Access Development Portal</h2>
-<p>Sign into one of the following URLs (choose the link you have been provided with): <a href="https://portal.temenos.cloud/">portal.temenos.cloud</a> or <a href="https://tcd-portal.temenos.cloud/">https://tcd-portal.temenos.cloud/</a> using the credentials provided by Temenos (Username and Password):</p>
+<p>Sign into one of the following URLs (choose the link you have been provided with): <a href="https://portal.temenos.cloud/">https://portal.temenos.cloud</a> or <a href="https://tcd-portal.temenos.cloud/">https://tcd-portal.temenos.cloud/</a> using the credentials provided by Temenos (Username and Password):</p>
 <p><img src="images/db-login.png" alt=""></p>
 <p><br></p>
-<h2 id="create-a-new-environment">Create a new environment</h2>
-<ul>
-<li>Fill the required fileds and press <strong>Create</strong></li>
-</ul>
-<p><img src="images/env-new.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p>You will need to create following three environments:</p>
-<p>• A build environment with template &quot;Build resources&quot;</p>
-<p>• A source environment with the required template (<em>in our example is &quot;Retail Suite R18.11&quot;</em>)</p>
-<p>• A target environment with the same template as the last one</p>
-</div>
-<p><strong>Build resources</strong> environment:</p>
-<p>Click New Environment button and fill the mandatory fields as in below picture:</p>
-<p><img src="images/jenkins-build-resources.png" alt=""></p>
+<h2 id="create-the-required-environments">Create the required environments</h2>
 <p>Fill the following parameters and press <strong>&#39;Create environment&#39;</strong>:</p>
 <p>•   Name</p>
 <p>•   Description</p>
 <p>•   Template</p>
 <p>•   <em>Labels (optional)</em></p>
-<p><img src="images/jenkins-build-integrated.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p>It might take about 15-20
- minutes to create the enviroment.</p>
+<ul>
+<li>Fill the required fields and press <strong>Create</strong>.</li>
+</ul>
+<div class="NOTE"><h5>Note</h5><p>It might take about 15-20 minutes to create an environment.</p>
 </div>
+<div class="NOTE"><h5>Note</h5><p>You will need to create following three environments:</p>
+<p>• A <strong>build</strong> environment with the required template (<em>in our example is &quot;BuildResources-Jenkins-Jfrog-R18.11&quot;</em>)</p>
+<p>• A <strong>source</strong> environment with the required template (<em>in our example is &quot;Retail Suite R18.11&quot;</em>)</p>
+<p>• A <strong>target</strong> environment with the same template as the last one.</p>
+</div>
+<p><img src="images/jenkins-build-environments.png" alt=""></p>
 <h2 id="login-to-jenkins">Login to Jenkins</h2>
-<p>After the &quot;BuildResources&quot; environment has been created, click on it and go to Jenkins Dashboard:</p>
-<p><img src="images/jenkins-build-dashboard-click.png" alt=""></p>
+<p>After the &quot;BuildServices&quot; environment has been created, click on it and go to Jenkins Dashboard:</p>
+<p><img src="images/jenkins-build-dashboard1.png" alt=""></p>
 <p><br></p>
 <p>In the new screen, click Login button on the top-right corner:</p>
 <p><img src="images/jenkins-build-dashboard-login.png" alt=""></p>
@@ -144,14 +151,14 @@
 <p>Build Pipeline works based on pipeline script (Jenkins file). </p>
 <p><strong>Requirements:</strong></p>
 <ul>
-<li>It requires valid credentials to pull the code from your Git repository (Github/Gitlab..etc). Users need to add credentials to clone the git repositories. <ul>
+<li>It requires valid credentials to pull the code from your GitLab (or Bitbucket) repository (or a different repository that will be made available). Users need to add credentials to clone the git repositories. <ul>
 <li>For setting up credentials please refer to below section &quot;Add SSH keys inside Jenkins&quot;</li>
 </ul>
 </li>
 </ul>
 <p><strong>Steps during build:</strong></p>
 <ul>
-<li>Pulls the code from GIT </li>
+<li>Pulls the code from the Gitlab (or Bitbucket) repository </li>
 <li>Builds the artifacts using DS binaries</li>
 <li>Deploys the artifacts in the TEST environments</li>
 </ul>
@@ -177,7 +184,8 @@
 <li>Click on <strong>New user</strong></li>
 <li>And fill the required fields</li>
 </ul>
-<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire public key generated before and then delete the last part until equal sign and press <strong>Create user</strong></p>
+<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire public key generated before and press <strong>Create user</strong>
+Don&#39;t forget to click <strong>Save private key</strong> from PuTTY Key Generator in order to save the private key that you may use later.</p>
 </div>
 <p><img src="images/user-details.png" alt=""></p>
 <h2 id="add-a-second-user-to-the-portal">Add a second user to the portal</h2>
@@ -187,7 +195,8 @@
 <li>Click on <strong>New user</strong></li>
 <li>And fill the required fields</li>
 </ul>
-<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire <strong>public</strong> key generated before and then delete the last part until equal sign and press <strong>Create</strong></p>
+<div class="NOTE"><h5>Note</h5><p>Copy-paste the entire <strong>public</strong> key generated before and press <strong>Create</strong>
+Don&#39;t forget to click <strong>Save private key</strong> from PuTTY Key Generator in order to save the private key that you may use later.</p>
 </div>
 <p><img src="images/user-new-second.png" alt=""></p>
 <h2 id="add-ssh-key-to-gitlab-repository">Add SSH key to GitLab repository</h2>
@@ -195,14 +204,15 @@
 <p>In this repository you have to add the ssh keys for the users created in order to connect to Jenkins and build resources.</p>
 <p>The users created into the <a href="https://portal.temenos.cloud/">https://portal.temenos.cloud/</a> will be automatically added in the Gitlab repo.</p>
 <ul>
-<li><p>Log in to GitLab as an <strong>admin</strong> and follow below steps:</p>
+<li><p>Log into GitLab (<a href="https://staging-gitlab.temenos.cloud/admin">https://staging-gitlab.temenos.cloud/admin</a>) as an <strong>admin</strong> and follow below steps:</p>
 <ul>
-<li>Click on the key for admin area</li>
-<li>Go to <strong>users</strong> tab</li>
-<li>Search the users created (<em>example: cristina</em>) and press enter</li>
-<li>Click on the user name and then on the edit button on the right</li>
-<li>Set a password of minimum 8 chars and repeat password for confirmation, then Save changes</li>
-<li>Logout from admin menu and login with the new user and the password set before</li>
+<li>Click on the key for admin area:</li>
+<li><img src="images/jenkins-build-admin.png" alt=""></li>
+<li>Go to <strong>users</strong> tab.</li>
+<li>Search the users created (<em>example: cristina</em>) and press enter. In case the user is not automatically added (due to a different platform use), please go to <strong>New user</strong> button and add the required users. </li>
+<li>Click on the user name and then on the edit button on the right.</li>
+<li>Set a password of minimum 8 chars and repeat password for confirmation, then Save changes.</li>
+<li>Logout from admin menu and login with the new user and the password set before.</li>
 </ul>
 </li>
 <li><p><strong>Change user password:</strong></p>
@@ -233,9 +243,16 @@
 </ol>
 </li>
 </ul>
+<p><img src="images/jenkins-build-project.png" alt=""></p>
 <p><img src="images/jenkins-build-user-gitlab-role.png" alt=""></p>
-<h2 id="add-credentials-and-use-id-from-temenos-ds-demo-project">Add credentials and Use ID from &#39;temenos-ds-demo&#39; Project</h2>
-<p>Inside Jenkins console, go to Credentials from left pane and then click global:</p>
+<h2 id="add-credentials-and-use-id-from-temenos-ds-r1811-demo-project">Add credentials and Use ID from &#39;Temenos-DS-R18.11-Demo&#39; Project</h2>
+<ul>
+<li>Go back to your organisation on TCD portal, click on BuildServices environment and access from there the Jenkins Dashboard.</li>
+<li><p>Login with user admin and the password previously changed (see <a href="jenkins-build-promote-pipelines.html#login-to-jenkins" target="blank"><strong>this step</strong></a>).</p>
+</li>
+<li><p>Inside Jenkins console, go to Credentials from left pane and then click global:</p>
+</li>
+</ul>
 <p><img src="images/jenkins-build-credentials.png" alt=""></p>
 <p><br></p>
 <p>Then add credentials:</p>
@@ -250,7 +267,7 @@
 <li>Click OK</li>
 </ul>
 <p><img src="images/jenkins-build-fields.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p>The ID field must be completed with the <strong>sshagent credentials</strong> taken from the JenkinsFile available on <a href="https://github.com/temenostech/temenos-ds-demo">https://github.com/temenostech/temenos-ds-demo</a> as in the picture above.</p>
+<div class="NOTE"><h5>Note</h5><p>The ID field must be completed with the <strong>sshagent credentials</strong> taken from the JenkinsFile available on <a href="https://staging-gitlab.temenos.cloud/root/Temenos-DS-R18.11-Demo/blob/master/JenkinsFile">https://staging-gitlab.temenos.cloud/root/Temenos-DS-R18.11-Demo/blob/master/JenkinsFile</a> as in the picture above.</p>
 </div>
 <p><br></p>
 <ul>
@@ -264,9 +281,9 @@
 <li>Click OK</li>
 </ul>
 <p><img src="images/jenkins-build-fields2.png" alt=""></p>
-<p>Now if you click on credentials, you will see the following screen with both users details:</p>
-<p><img src="images/jenkins-build-user-id.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p>This uniqe ID of SSH key will be used in the pipeline scripts (Jenkins File) to clone the repositories. </p>
+<p>Now if you click on credentials, you will see the following screen with both users details (on the Jenkins dashboard from your &#39;BuildServices&#39; environment):</p>
+<p><img src="images/jenkins-build-users-credentials.png" alt=""></p>
+<div class="NOTE"><h5>Note</h5><p>This unique ID of SSH key will be used in the pipeline scripts (Jenkins File) to clone the repositories. </p>
 </div>
 <h2 id="configure-jenkins-pipeline-job-to-use-ssh-keys">Configure Jenkins pipeline job to use SSH keys</h2>
 <ul>
@@ -283,7 +300,7 @@
 <li><p>And finally click on &#39;Pipeline&#39;</p>
 </li>
 </ul>
-<p><img src="images/jenkins-build-pipeline.png" alt=""> </p>
+<p><img src="images/jenkins-build-pipeline1.png" alt=""> </p>
 <ul>
 <li>On the same screen, make sure you have the Jenkins File path in Script Path, then click on Apply and &#39;Save&#39; </li>
 </ul>
@@ -302,7 +319,8 @@
 <p>Click <strong>Build</strong>.</p>
 <p><img src="images/jenkins-build-pipeline-build.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>The environment ID is the one that appears on the URL address after you login and you click on your environment:</p>
-<p><img src="images/jenkins-build-environment-id.png" alt=""> </p>
+<p><img src="images/jenkins-build-environmentid.png" alt=""> 
+In this case, we have used the DevEnv_201811 created initially on the platform.</p>
 </div>
 <p>Build should be successful:</p>
 <p><img src="images/jenkins-build-success.png" alt=""> </p>
@@ -316,7 +334,7 @@
 </li>
 </ul>
 <ul>
-<li>Insert your repository URL (<em>in our example: git@staging-gitlab.temenos.cloud:root/Temenos-DS-Demo.git</em>)</li>
+<li>Insert your repository URL (<em>in our example: git@staging-gitlab.temenos.cloud:root/Temenos-DS-R18.11-Demo.git</em>)</li>
 <li>Credentials: use the second user that you added to the portal</li>
 <li>Script Path: PromoteChangesJenkinsFile</li>
 </ul>
@@ -326,6 +344,11 @@
 <p>New screen is open:</p>
 <p><img src="images/jenkins-build-promote-screen.png" alt=""> </p>
 <p>Click <strong>Build</strong>.</p>
+<div class="NOTE"><h5>Note</h5><p>The image above displays only an example.</p>
+<p><strong>SourceEnvID</strong> is the one of the DevEnv_201811 created on the platform.</p>
+<p><strong>TargetEnvID</strong> is the one of the IntegrationEnv_201811created on the platform.
+(see <a href="jenkins-build-promote-pipelines.html#create-the-required-environments" target="blank"><strong>here</strong></a>).</p>
+</div>
 <p><br></p>
               <hr>
               
