--- a/home/techguides/make-updates-cloud.html
+++ b/home/techguides/make-updates-cloud.html
@@ -168,7 +168,7 @@
 <p><img src="images/make-updates-tsa-start.png" alt=""></p>
 <ul>
 <li>Go back to the portal, click your environment and click <strong>Monitor Application</strong>.</li>
-<li>Sign in with user: <strong>jbossuser</strong> and password: <strong>Pass@1234</strong>. </li>
+<li>Sign in with your user and password. </li>
 </ul>
 <p><img src="images/make-updates-monitor-login.png" alt=""></p>
 <ul>
