--- a/home/toc.html
+++ b/home/toc.html
@@ -173,6 +173,9 @@
                         <li>
                           <a href="fcm-configuration-video.html" name="" title="FCM Cloud Configuration">FCM Cloud Configuration</a>
                         </li>
+                        <li>
+                          <a href="design-studio-tutorials.html" name="" title="Design Studio Tutorials">Design Studio Tutorials</a>
+                        </li>
                       </ul>  </li>
                 </ul>  </li>
             <li>
