--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -311,6 +311,7 @@ MVCC=TRUE;LOCK_TIMEOUT=30000<br> <span style="color:red">Replace <strong>ENV_DNS
 <img src="images/load_data_2.png" alt="extract data 2"><br><br></li>
 <li>A success message should be displayed in the console.<br><img src="images/load_data_3.png" alt="extract data 3">  </li>
 </ul>
+<p>For more tutorials on how Design Studio works, please check <a href="http://documentation.temenos.cloud/home/design-studio-tutorials.html/" target="_blank"><u><strong>here.</strong></u></a> </p>
 <p><br></p>
               <hr>
               
