--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -126,13 +126,12 @@ The parts of the stream are listed below:</p>
 </div>
 <p>Example 1: </p>
 <ul>
-<li>Suppose we have created a stream named Dev2 that has just the default stage (</li>
-<li>) and without adding other stages or configuring further components and products.</li>
+<li>Suppose we have created a stream named Dev2 that has just the default stage and without adding other stages or configuring further components and products.</li>
 <li>We can just go and delete this stream (even if it has the stable_dev associated to it).</li>
 </ul>
 <p>Example 2:</p>
 <ul>
-<li>Suppose we have created a stream named Dev that has the default stage (stable_dev) and and also a stage named Primary_stage, without configuring further components and products.</li>
+<li>Suppose we have created a stream named Dev that has the default stage (stable_dev) and also a stage named Primary_stage, without configuring further components and products.</li>
 <li>In order to be able to delete a stream that has <strong>more than the stable_dev stage</strong>, we need first to go and delete the stages attached to it.</li>
 <li>Go first to Stages button on the left menu &gt; Select first your stream (top right) &gt; Select the stage that you want to delete (others then stable_dev - <em>because this stage cannot be deleted</em>) &gt; And click the delete button.</li>
 </ul>
