--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -113,7 +113,7 @@
 <li>You can check the created repository by clicking the Artifacts button on the left side menu of the JFrog Artifactory:</li>
 </ul>
 <p><img src="images/create-template-artifacts.png" alt=""></p>
-<h2 id="setting-the-stage">Setting the Stage</h2>
+<h2 id="setting-the-default-stage">Setting the Default Stage</h2>
 <p>To proceed further with all the configurations required in order to run a factory, you need to have a default stage created.</p>
 <p>There are two possibilities to set the stage:</p>
 <ul>
