--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -124,14 +124,14 @@
 <h2 id="set-up-create-a-factory">Set-up/ Create a Factory</h2>
 <ul>
 <li>Click on Settings button on the main menu on the left.</li>
-<li>Make sure you select first the Stream and Stage where you want to create a factory and then click <strong>New Factory</strong> button on the top-right.</li>
+<li>Make sure you select first the <strong>Stream</strong> and <strong>Stage</strong> (this is the stage where components are promoted) where you want to create a factory and then click <strong>New Factory</strong> button on the top-right.</li>
 <li>Fill the required fields (see all definitions above and also below example). All fields are mandatory except the last three <em>(Base Products, Success Webhook and Failure Webhook)</em>. <ul>
-<li>Name: choose a meaningful name for your factory.</li>
-<li>Description: put a description that will help knowing what the factory is about.</li>
-<li>Templates: choose an Environment Template from the dropdown list. Based on this template will be created the environments where you will be able to test different products.</li>
-<li>Test Environment Template: this is a defaulted test tool available on the Platform in order to be able to run your tests on the Platform interface. Based on the Environment release you should choose the related Test Template.</li>
-<li>Source Stage: this is the stage with the stable version of components. </li>
-<li>Base Stage <em>(target stage)</em>: this is the stage where components are promoted. When testing the first time, you can choose the same stage for source and base to make sure everything is promoted successfully.</li>
+<li><strong>Name</strong>: choose a meaningful name for your factory.</li>
+<li><strong>Description</strong>: put a description that will help knowing what the factory is about.</li>
+<li><strong>Templates</strong>: choose an Environment Template from the dropdown list. Based on this template will be created the environments where you will be able to test different products.</li>
+<li><strong>Test Environment Template</strong>: this is a defaulted test tool available on the Platform in order to be able to run your tests on the Platform interface. Based on the Environment release you should choose the related Test Template.</li>
+<li><strong>Source Stage</strong>: this is the stage with the stable version of components. </li>
+<li><strong>Base Stage</strong>: this is the stage with the constituent components. When testing the first time, you can choose the same stage for source and base to make sure everything is promoted successfully.</li>
 <li>Principle Products - these are promoted to the next stage and belong under Source Stage.</li>
 <li>Base Products - these are products that don’t need to be promoted but they are required to test the Principle Products and they belong under the Base Stage.</li>
 </ul>
