--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -116,7 +116,7 @@ An organization can define as many components as needed but should have all mand
 <li>Login to the Temenos Continuous Deployment Platform.</li>
 <li>Click on Settings button on the left menu &gt; this will expand a menu containing buttons for: Streams, Stages, Products, Factory and General.  </li>
 <li>Before creating a component, make sure you select first the stream <em>(top-right)</em> where you want to add the respective component. </li>
-<li>Click on <strong>Products</strong> button. (This button includes creation of the components and then </li>
+<li>Click on <strong>Products</strong> button. (This button includes creation of the components)</li>
 <li>Click on the <strong>New Component</strong> on the top right.</li>
 <li>Select the Component Type from the dropdown list (the list displays all the components available for your Organization. This is based on the available templates).</li>
 <li>Input a Name. <em>Take into account these conditions (also notified on the screen): Name can start only with a letter or an underscore and it can contain only letters, digits, underscores or hyphens.</em></li>
@@ -146,7 +146,7 @@ Also the binaries/ artifacts have to be uploaded each time a component is update
 <li>Then from the available Templates Catalog, select the one that you need in order to check the components.</li>
 <li>Under Full Template Content, scroll until you see the <strong>components</strong> section.</li>
 <li><span style="color:red"><strong>Note:</strong></span><span style="color:red"> Usually there are at least two <strong>components</strong> sections: one related to T24 and another one refers to Model Bank Database (or other db). Depending on the template type, there could be more components, so please make sure you scroll down to check entirely the template in order to add all required components.</span></li>
-<li>Is is required to add at least all the mandatory components.</li>
+<li>It is required to add at least all the mandatory components.</li>
 <li><span style="color:red">In addition to the mandatory components, you will need to add those components you need to test - not related to your selected template.</span></li>
 <li>For all added components, make sure you add the related files archive into the artifactory as explained above.</li>
 </ul>
