--- a/home/access-ud-directories-video.html
+++ b/home/access-ud-directories-video.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/wqBTV76cAOQ" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kA9xIOp9r3k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>6:25 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>7:28 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
