--- a/home/fcm-configuration-video.html
+++ b/home/fcm-configuration-video.html
@@ -82,13 +82,13 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/XBsmOZvg-z8" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_tCMzw4NVFg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>8:47 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>10:10 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 25 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
