--- a/home/add-features-to-environment-video.html
+++ b/home/add-features-to-environment-video.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/K3di3QTa9vU" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DhxML5u8tz8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:31 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>20:59 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 35 minutes</strong> (from which <strong>15 minutes</strong> the creation of the environment)</p>
 <p><br>
