--- a/home/create-dev-env-video.html
+++ b/home/create-dev-env-video.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/JScmql1mUaw" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ENrcuKLR0E4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>8:50 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>9:54 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
