--- a/home/jenkins-build-video.html
+++ b/home/jenkins-build-video.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/NKuOZJURZzg" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jpBYykOvf00" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:54 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>22:51 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 30 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environments &gt; <em>creation of the environments can be simultaneous</em>)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
