--- a/home/cloud-environments-customize-templates.html
+++ b/home/cloud-environments-customize-templates.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe src="https://www.youtube.com/embed/wEyJOtSrijI" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
- </body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Bwr4eiy4p1A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+ </body> 
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>22:28 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>21:02 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 40 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment and <strong>~ 10 minutes</strong> the rebuild action - <em>the duration depends also on the changes</em>)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
