--- a/home/run-factory-video.html
+++ b/home/run-factory-video.html
@@ -80,7 +80,10 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p>Coming soon!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hVAXlG73DF4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>2:19 minutes</strong>
+<br></p>
 <p><br></p>
               <hr>
               
