--- a/home/setup-factories-video.html
+++ b/home/setup-factories-video.html
@@ -80,7 +80,18 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p>Coming soon!</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/hVAXlG73DF4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>2:19 minutes</strong>
+<br></p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>After setting-up a factory, go to Dashboard on the main menu and <span style="color:#005294"><strong>select the factory</strong></span>  you created 
+<br></li>
+<li>Click <span style="color:#005294"><strong>Run Now</strong></span>.
+<br></li>
+</ul>
 <p><br></p>
               <hr>
               
