--- a/home/setup-stages-video.html
+++ b/home/setup-stages-video.html
@@ -80,7 +80,25 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p>Coming soon!</p>
+<html>
+ <body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EPphRh8L48c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+ </body>
+</html>
+
+
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>4:34 minutes</strong>
+<br></p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li><span style="color:#005294"><strong>Set-up/ Create a stage</strong></span> 
+<br></li>
+<li><span style="color:#005294"><strong>Edit a stage</strong></span>
+<br></li>
+<li><span style="color:#005294"><strong>Delete a stage</strong></span></li>
+</ul>
 <p><br></p>
               <hr>
               
