--- a/home/manage-artifactory-test-cycle-video.html
+++ b/home/manage-artifactory-test-cycle-video.html
@@ -80,25 +80,18 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZGUZsMPVDw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/u5iC6mBlbX8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
-<p> 
-</p>
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>11:21 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>2:19 minutes</strong>
 <br></p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Click on the New Component and <span style="color:#005294"><strong>select the Component Type</strong></span> 
+<li>After setting-up a factory, go to Dashboard on the main menu and  (in case you have more factories).<span style="color:#005294"><strong>select the factory</strong></span> you created 
 <br></li>
-<li><span style="color:#005294"><strong>Input</strong></span> a name
+<li><span style="color:#005294"><strong>Click Run Now.</strong></span> 
 <br></li>
-<li><span style="color:#005294"><strong>Fill</strong></span> in the description
-<br></li>
-<li><span style="color:#005294"><strong>Fill</strong></span> the display name
-<br></li>
-<li><span style="color:#005294"><strong>Click</strong></span> create</li>
 </ul>
 <p><br></p>
               <hr>
