--- a/home/setup-testcases-video.html
+++ b/home/setup-testcases-video.html
@@ -80,7 +80,29 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p>Coming soon!</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XOmjlEpqFeI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+
+<p><br></p>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>2:14 minutes</strong>
+<br></p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Click on the New Component and <span style="color:#005294"><strong>Click</strong></span>  on the TestCases folder 
+<br></li>
+<li><span style="color:#005294"><strong>Click</strong></span> on the Deploy button
+<br></li>
+<li><span style="color:#005294"><strong>Fill</strong></span> the required field
+<br></li>
+<li>Choose <span style="color:#005294"><strong>a meaningful name</strong></span>  for your factory
+<br></li>
+<li><span style="color:#005294"><strong>Choose Single or Multi</strong></span> based on number of zip folders that you need to upload and drop or select the test cases zip file
+<br></li>
+<li>Click on the <span style="color:#005294"><strong>Deploy</strong></span> button
+<br></li>
+<li>To delete the uploaded test cases <span style="color:#005294"><strong>click on testcases.zip file, then on the Actions button (under Deploy) and Delete.</strong></span> 
+<br></li>
+</ul>
 <p><br></p>
               <hr>
               
